<resources>
  <string name="app_name">Another Cangjie Input Method</string>
  <string name="cangjie_input_label">Cangjie Input Method</string>
  <string name="label_english">英</string>
  <string name="chinese_comma">，</string>
  <string name="chinese_question">！</string>
  <string name="cangjie">倉</string>
  <string name="quick">速</string>
  <string name="cangjie_fullname">倉頡</string>
  <string name="you">你</string>
  <string name="prefs_hongkongchar_key">prefs_hongkongchar_key</string>
  <string name="prefs_hongkongchar_title">啟用香港字（只限倉頡）</string>
  <string name="prefs_autosend_key">prefs_autosend_key</string>
  <string name="prefs_autosend_title">自動送字</string>
  <string name="prefs_inputmethod_title">預設輸入法</string>
  <string name="prefs_inputmethod_summary">每次開啟時，會選擇預設輸入法</string>
  <string name="prefs_inputmethod_key">prefs_inputmethod_key</string>
  <string name="prefs_next_inputmethod_title">切換到所選擇輸入法</string>
  <string name="prefs_next_inputmethod_summary">由這輸入法切換到所選擇輸入法</string>
  <string name="prefs_next_inputmethod_key">prefs_next_inputmethod_key</string>
  <string name="no_next_inputmethod">只切換到下一個輸入法</string>
  <string name="please_select_next_inputmethod_again">請重新選擇"切換輸入法"</string>
  <string name="prefs_clear_often_used_key">prefs_clear_often_used_key</string>
  <string name="prefs_clear_often_used_title">清洗常用字記錄</string>
  <string name="prefs_clear_often_used_summary">如果常用字有問題，請按這個選項，下次鍵盤開啟時，將會重設．</string>
  <string name="vibrate_on_keypress">按鍵震動</string>
  <string name="prefs_keypress_vibration_duration_settings">按鍵震動</string>
  <string name="sound_on_keypress">按鍵音量</string>
  <string name="prefs_keypress_sound_volume_settings">按鍵音量</string>
  <string name="settings_ms">ms</string>
</resources>
